--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,9 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.31"
-chrono-tz = "0.8.4"
+clap = { version = "4.4.11", features = ["derive"] }
 futures-util = "0.3.30"
 once_cell = "1.19.0"
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.108"
 tap = "1.0.1"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "time"] }
 tokio-tungstenite = "0.21.0"
