--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.2", features = ["ws"] }
 chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
 futures-util = "0.3.30"
 once_cell = "1.19.0"
+rand = "0.8.5"
 tap = "1.0.1"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "time"] }
-tokio-tungstenite = "0.21.0"
