--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,19 +90,18 @@ jobs:
           zip -r dm-dss-replayer-linux.zip dm-dss-replayer
 
       - name: pre-release
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: softprops/action-gh-release@v2.0.5
         if: "! startsWith(github.ref, 'refs/tags/')"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          tag_name: "latest"
           prerelease: true
-          title: "Development Build"
+          name: "Development Build"
           files: |
             dm-dss-replayer-windows.zip
             dm-dss-replayer-linux.zip
 
       - name: tagged-release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v2.0.5
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
